<resources>
    <string name="app_name">Calculator phone</string>

    <string name="c">C</string>
    <string name="manfiy">+/-</string>
    <string name="bolish">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="ayiruv">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="nuqta">.</string>
    <string name="teng">=</string>
    <string name="_452">452</string>

</resources>